--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="./css/main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mini Games</title>
+    <title>Mini Games Mobile</title>
 </head>
 <body>
     <main>
-
         <section class="middle-wrapper">
             <div class="mini-games-head"> 
                 <!-- <img class="logo" src="./assets/images/logo.png" alt="MINI GAMES">     -->
@@ -18,7 +17,7 @@
 
             <div class="mini-games-content-wrapper">
                 
-                <div data-tilt data-tilt-glare="true" data-tilt-maxGlare=".5" class="hilo-container game-container">
+                <div data-tilt data-tilt-glare="true" data-tilt-maxGlare=".5" data-tilt-speed="700" class="hilo-container game-container">
                     <div data-tilt class="hilo-components inner-components">
                         <h1 class="hilo-title title">HILO</h1>
                         <img  class="hilo-cards" src="./assets/images/hilo/hilo-cards-withArrows.png" alt="">
@@ -30,7 +29,7 @@
                    </div>     
                 </div>
 
-                <div data-tilt data-tilt-glare="true" data-tilt-maxGlare=".5" class="dino-container game-container">
+                <div data-tilt data-tilt-glare="true" data-tilt-maxGlare=".5" data-tilt-speed="700" class="dino-container game-container">
                     <div data-tilt class="dino-components inner-components">
                         <h1 class="dino-title title">DINO</h1>
                         <img  class="dinosaur" src="./assets/images/dino/dinosaur.png" alt="">
@@ -44,7 +43,7 @@
                     </div>
                 </div>
 
-                <div data-tilt data-tilt-glare="true" data-tilt-maxGlare=".5" class="dice-container game-container">
+                <div data-tilt data-tilt-glare="true" data-tilt-maxGlare=".5" data-tilt-speed="700" class="dice-container game-container">
                     <div data-tilt class="dice-components inner-components">
                         <h1 class="dice-title title">DICE</h1>
                         <img class="dice-cube" src="./assets/images/dice/dice-cube.png" >
@@ -57,7 +56,7 @@
                     </div>
                 </div>
                 
-                <div data-tilt data-tilt-glare="true" data-tilt-maxGlare=".5" class="chicken-container game-container">
+                <div data-tilt data-tilt-glare="true" data-tilt-maxGlare=".5" data-tilt-speed="700" class="chicken-container game-container">
                     <div data-tilt class="chicken-components inner-components">
                         <h1 class="chicken-title title">CHICKEN</h1>
                         <img class="chicken-dinner" src="./assets/images/chicken/chicken-dinner.png" >
@@ -71,7 +70,7 @@
                     </div>
                 </div>
 
-                <div data-tilt data-tilt-glare="true" data-tilt-maxGlare=".5" class="plinko-container game-container">
+                <div data-tilt data-tilt-glare="true" data-tilt-maxGlare=".5" data-tilt-speed="700" class="plinko-container game-container">
                     <div data-tilt class="plinko-components inner-components">
                         <h1 class="plinko-title title">PLINKO</h1>
                         <img class="plinko-pyramid" src="./assets/images/plinko/plinko-pyramid.png" >
@@ -85,7 +84,7 @@
                     </div>
                 </div>
 
-                <div data-tilt data-tilt-glare="true" data-tilt-maxGlare=".5" class="keno-container game-container">
+                <div data-tilt data-tilt-glare="true" data-tilt-maxGlare=".5" data-tilt-speed="700" class="keno-container game-container">
                     <div data-tilt class="keno-components inner-components">
                         <h1 class="keno-title title">KENO</h1>
                         <!-- <img class="keno-balls" src="./assets/images/keno/keno-balls.png" > -->
