--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="./css/main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mini Games Mobile</title>
+    <title>Mini Games</title>
 </head>
 <body>
     <main>
+
         <section class="middle-wrapper">
             <div class="mini-games-head"> 
                 <!-- <img class="logo" src="./assets/images/logo.png" alt="MINI GAMES">     -->
