--- a/index.html
+++ b/index.html
@@ -106,12 +106,18 @@
         </section>
 
         <div class="bg-component-wrapper">
-            <img class="cube_lime" src="./assets/images/background/cubes_lime.png">
-            <img class="cube_lime2" src="./assets/images/background/cubes_lime.png">
-            <img class="cube_purple" src="./assets/images/background/cubes_purple.png">
-            <img class="cube_purple2" src="./assets/images/background/cubes_purple.png">
-            <img class="cube_red" src="./assets/images/background/cubes_red.png">
-            <img class="cube_red2" src="./assets/images/background/cubes_red.png">
+                <!-- <img class="pos" src="./assets/images/background/"> -->
+                <!-- <img class="pos" src="./assets/images/background/lime_cube.png">
+                <img class="pos" src="./assets/images/background/lime_cube.png">
+                <img class="pos" src="./assets/images/background/lime_cube.png">
+                <img class="pos" src="./assets/images/background//lime_cube_fragmented.png">
+                <img class="pos" src="./assets/images/background//lime_cube_fragmented.png">
+                <img class="pos" src="./assets/images/background//lime_cube_fragmented.png">
+                <img class="pos" src="./assets/images/background//lime_cube_fragmented.png"> -->
+
+                    <div class="left"></div>
+                    <div class="right"></div>
+
             <div class="bg-gradient">  </div>
         </div>
     </main>
